# arxiv-translator

./: .gitignore  README.md  check_cn.py  environment.yml  pyproject.toml  release_notes_v0.2.2.md  release_notes_v0.3.1.md  requirements.txt  test_cn.tex
.github/workflows/: ci.yml  publish.yml
src/: compiler.py  downloader.py  extractor.py  main.py  translator.py
src/arxiv_translator/: compiler.py  config.py  core.py  deepdive.py  downloader.py  extractor.py  logging_utils.py  main.py  translator.py
src/arxiv_translator/prompts/: deepdive_prompt.txt
tests/: test_compiler.py  test_core.py  test_downloader.py  test_e2e.py  test_extractor.py  test_translator.py
